--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -21,14 +21,14 @@ const { title } = Astro.props;
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Sanchez:ital@0;1&display=swap" rel="stylesheet">
-		<link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Other/NJROTC-Seal.svg" />
+		<link rel="icon" type="image/svg+xml" href="/public/NJROTC.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>DashBoard | {title}</title>
 		<ViewTransitions fallback="animate"/>
 </head>
 <body>
     <div id="Dashboard-Title">
-        <img src="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/main/Other/NJROTC-Seal.svg">
+        <img src="/public/NJROTC.svg">
         <h1>NJROTC Dashboard</h1>
     </div>
     <header id="Dashboard-Header">
