--- a/src/layouts/Dashboard.css
+++ b/src/layouts/Dashboard.css
@@ -32,7 +32,24 @@ body{
     margin:0;
     padding:0;
 
-    font-family: 'Sanchez'
+    font-family: 'Sanchez';
+    
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-drag: none;
+    -moz-user-drag: none;
+    -ms-user-drag: none;
+}
+img {
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-drag: none;
+    -moz-user-drag: none;
+    -ms-user-drag: none;
 }
 
 #Dashboard-Title{
