--- a/src/pages/Home/index.astro
+++ b/src/pages/Home/index.astro
@@ -2,7 +2,7 @@
 import Dashboard from "../../layouts/Dashboard.astro";
 import DropDown from '../../components/Repeat/Dropdown.astro'
 
-import Clock from '../../components/Clock.astro'
+import Clock from '../../components/One_Time_Use/Clock.astro'
 ---
 
 <Dashboard title='Home'>
