--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,22 +42,28 @@ import Box from '../components/Pages/Login.astro';
         formData.forEach((value, key) => {
             jsonObject[key] = value;
         });
+        console.log(JSON.stringify(jsonObject))
 
-
-        let loginResponse = await fetch("localhost:8080/api/alpha/v1/users/signup",{
+        let loginResponse = await fetch("http://localhost:8080/api/alpha/v1/users/login",{
             method:"POST",
             headers:{
                 "Content-Type":"application/json"
             },
-            body:JSON.stringify(formData)
+            body:JSON.stringify(jsonObject)
         }).then(((res)=>{
+            console.log(res)
             if(res.ok){
-                return res.json()
+                return res.text()
             }else{
                 throw new Error("welp something messed up")
             }
         })).then((data)=>{
             console.log(data)
+            if(data){
+                window.location.href = "/Dashboard/Home"
+            }else{
+                // code goes here for handleing incorrecto username/pwasord
+            }
         }).catch((err)=>{
             console.log(err)
         })
