--- a/src/components/ReQestMenu/Ribbon_List.astro
+++ b/src/components/ReQestMenu/Ribbon_List.astro
@@ -26,7 +26,7 @@
     }
     #text {
         position: absolute;
-        width: 232px;
+        width: 70%;
     }
     #text::spelling-error{
         text-decoration-line: none;
