--- a/src/layouts/Dashboard.astro
+++ b/src/layouts/Dashboard.astro
@@ -1,8 +1,7 @@
 ---
 import Link from "../components/menu/Link.astro";
 import Setting from '../components/menu/Setting.astro';
-import ViewTransitions from 'astro/components/ViewTransitions.astro';
-import "./Dashboard.css"
+import "./Dashboard.css";
 interface Props {
 	title: string;
 }
@@ -24,7 +23,6 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/Parlier-NJROTC/Assets/c5cddb2fd71a4737ac4ae89491347a84d3608f23/Other/NJROTC-Seal.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>DashBoard | {title}</title>
-		<ViewTransitions fallback="animate"/>
 </head>
 <body>
     <div id="Dashboard-Title">
