--- a/src/components/Pages/Ribbon.astro
+++ b/src/components/Pages/Ribbon.astro
@@ -84,6 +84,7 @@ import Menu from '../ReQestMenu/ItemMenu.astro';
       background-color: rgb(0, 0, 0);
       border: 5px double #ffffff;
       color: white;
+
     }
    .box {
       display: flex;
@@ -111,7 +112,7 @@ import Menu from '../ReQestMenu/ItemMenu.astro';
       position: absolute;
       height: 50px;
       z-index: 90;
-      top: 330px;
+      bottom: 200px;
     }
     @keyframes fadeIn {
       0% {
