--- a/src/components/ReQestMenu/Ribbon_List.astro
+++ b/src/components/ReQestMenu/Ribbon_List.astro
@@ -17,7 +17,7 @@
 <style>
     #dateTimeInput {
         overflow: hidden;
-        width: 216.5px;
+        width: 218.5px;
         cursor: default;
     }
     #dateTimeInput::selection{
@@ -26,11 +26,16 @@
     }
     #text {
         position: absolute;
-        width: 70%;
+        width: calc(24vw - 5vw);
     }
     #text::spelling-error{
         text-decoration-line: none;
     }
+    #text:focus{
+        border-left: solid 2px black;
+        background-clip: border-box;
+    }
+
     #text::selection{
         background-color: navy;
         color: #ffffff;
@@ -45,6 +50,7 @@
         background-color: gainsboro;
         border: double 8px black;
         color: black;
+        overflow-x: hidden;
     }
     input[type="text"] {
         height: 60px;
